# allennlp-multi-label

./:  .allennlp_plugins   .coveragerc  .flake8  .gitignore  README.md  README.rst  RELEASE_PROCESS.md  app.py  pyproject.toml  setup.py
.github/workflows/: build.yml
allennlp_multi_label/: .pre-commit-config.yaml  __init__.py  dataset_reader.py  metrics.py  model.py  predictor.py
allennlp_multi_label/data/: __init__.py
allennlp_multi_label/data/dataset_readers/: __init__.py  multi_label_dataset_reader.py
allennlp_multi_label/models/: __init__.py  multi_label_classifier.py
allennlp_multi_label/predictors/: __init__.py  multi_label_classifier.py
allennlp_multi_label/training/metrics/: __init__.py  fbeta_multi_class_measure.py
allennlp_plugins/allennlp_multi_label/: __init__.py
configs/: multi_label_classifier.jsonnet
src/data/dataset_readers/: __init__.py
src/models/: __init__.py  multi_label_classifier.py
src/training/metrics/: __init__.py  fbeta_multi_class_measure.py
tests/: test_allennlp_multi_label.py  test_dataset_reader.py  test_fbeta_multi_label_measure.py  test_metrics.py  test_model.py
tests/fixtures/: common.jsonnet  experiment.jsonnet
tests/fixtures/data/: integer_labels.jsonl
tests/fixtures/data/reuters-21578/: train.jsonl  valid.jsonl
tests/training/metrics/: test_fbeta_multi_label_measure.py
training_config/: multi_label_classifier.jsonnet
