[tool.poetry]
name = "allennlp-multi-label"
version = "0.1.0"
description = "A multi-label classification plugin for AllenNLP."
license = "Apache-2.0"
authors = ["johngiorgi <johnmgiorgi@gmail.com>"]
readme = "README.md"
repository = "https://github.com/semantic-health/allennlp-multi-label"
keywords = [
    "pytorch",
    "allennlp",
    "transformers",
    "document classification",
    "multi-label",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
exclude = ["tests", "training_config"]

[tool.poetry.dependencies]
python = "^3.6.1"
allennlp = {git = "https://github.com/allenai/allennlp.git"}

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
hypothesis = "^5.41.2"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
coverage = "^5.5"
codecov = "^2.1.10"
dephell = {extras = ["full"], version = "^0.8.3"}

[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
